[Update] Bootstrap vom Linter ausschließen, kleinere Anpassungen

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,8 +3,8 @@
 
 body,
 html {
-    background-color: $color-red;
-    font-family: 'Roboto';
+    background-color: $color-white;
+    font-family: 'Tahoma';
     font-size: $base-font-size;
     height: 100%;
     margin: 0;
